--- a/src/upload.html
+++ b/src/upload.html
@@ -36,7 +36,8 @@
 
                 @@include("partials/page-title.html", {"pagetitle": "", "title": "Upload Document"})
 
-                <form>
+                <form
+                    style=" height: calc(100vh - 190px); display: flex; flex-direction: column; justify-content: center;">
                     <div>
                         <div class="step step-1 active">
                             <div class="card">
@@ -105,7 +106,7 @@
                         </div>
                         <div class="step step-4 ">
                             <div class="card">
-                                <embed src="/src/assets/pdf/Resume.pdf" width="800px" height="800px" />
+                                <iframe src="/src/assets/pdf/Resume.pdf" width="800px" height="800px"></iframe>
 
                                 <div class="step4-btn">
                                     <button type="button" class="prev-btn">Prev</button>
