--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <div class="page-content">
             <div class="container-fluid">
 
-                @@include("partials/page-title.html", {"pagetitle": "Upcube", "title": "Dashboard"})
+                @@include("partials/page-title.html", {"pagetitle": "SoftInk", "title": "Dashboard"})
 
                 <div class="row">
                     <div class="col-xl-3 col-md-6">
