--- a/src/profile.html
+++ b/src/profile.html
@@ -50,9 +50,9 @@
                                         <!-- header section -->
                                         <div class="d-flex">
                                             <a href="#" class="me-25">
-                                                <img src="/dist/assets/images/" id="account-upload-img"
+                                                <img src="assets/images/avatar-9.jpg" id="account-upload-img"
                                                     class="uploadedAvatar rounded me-50" alt="profile image"
-                                                    height="100" width="100" />
+                                                    height="100" width="100" style="object-fit: cover;" />
                                             </a>
                                             <!-- upload and reset button -->
                                             <div class="d-flex align-items-end mt-75 ms-1">
