--- a/src/search.html
+++ b/src/search.html
@@ -43,7 +43,12 @@
                     style="margin: 0 auto; width: 100%; display: flex; flex-direction: column; height: calc(100vh - 170px);">
 
                     <div class="card-body"
-                        style=" display: flex; justify-content: center; align-items: center; width: 100%;">
+                        style=" display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%;">
+                        <div class="row"
+                            style=" width: 90%; display: flex; flex-direction: row; align-items: center; justify-content: center; text-align: center; margin-bottom: 20px;">
+                            <h1>SoftInk Archive Search</h1>
+
+                        </div>
                         <div class="row"
                             style=" width: 90%; display: flex; flex-direction: row; align-items: center; justify-content: center;">
                             <div class="col-xl-20 col-md-10 col-sm-6 col-12 pe-sm-0">
